got all the training course folder structures

--- a/training.html
+++ b/training.html
@@ -71,19 +71,67 @@
 
     <div class="row">
       <div class="col-lg-12">
-        <h2 class="mt-5">Domestic Violence General Knowledge</h2>
-        <div>Begin the training or continue where you left off (mabye?)</div>
+        
+        
       </div>
     </div>
 
     <div class="row">
       <div class="col-lg-12">
-        <h2 class="mt-5">Injunctions</h2>
-        <div><a href="injunction-training-begin.html">Begin</a> the training or continue where you left off (mabye?)</div>
+        <h2 class="mt-5">Section One: Domestic Violence General Knowledge</h2>
+        <p> -or- </p>
+        <h2 class="mt-5">Section One: Domestic Violence Review</h2>
+        <div><a href="domestic-violence-review.html">Domestic Violence Review</a> Why is this the first course? 
+          Don't you typically do a review at the end? and is it the Review or the General Knowledge, the existing site has it as both?</div>
+          <div>Begin the training or continue where you left off </div>
       </div>
     </div>
 
+    <div class="row">
+      <div class="col-lg-12">
+        <h2 class="mt-5">Section Two: Injunctions</h2>
+        <div><a href="injunction-training-begin.html">Begin</a> the training or continue where you left off (mabey?)</div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-12">
+        <h2 class="mt-5">Section Three: Final Judgment of Injunction for Protection Against Domestic Violence</h2>
+        <div><a href="finaljudgement/final-judgement-training-begin.html">Begin</a> the training or continue where you left off (mabye?)</div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-12">
+        <h2 class="mt-5">Section Four: Compliance, Enforcement, and Subsequent Actions</h2>
+        <div><a href="complianceenforcenment/compliance-training-begin.html">Begin</a> the training or continue where you left off (mabye?)</div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-12">
+        <h2 class="mt-5">Section Five: Instructional Videos for Conducting Domestic Violence Final Hearings</h2>
+        <div><a href="instructionalvideos/instructional-training-begin.html">Begin</a> the training or continue where you left off (mabye?)</div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-12">
+        <h2 class="mt-5">Final Test</h2>
+        <div><a href="#">Complete</a> the training </div>
+      </div>
+    </div>
+
+    <div>
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+    </div>
+
   </div>
+
   <footer class="page-footer font-small footer">
     ©2021 Office of Court Improvement, Florida Supreme Court
      </footer>
