--- a/domestic-violence-review.html
+++ b/domestic-violence-review.html
@@ -63,30 +63,32 @@
   </nav>
 
   <!-- Page Content -->
+  <div class="training-body">
   <div class="container">
     <div class="row">
-      <div class="col-lg-12 text-center">
-        <h1 class="mt-5">This is the main header</h1>
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna 
-          aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-           Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <div class="col-lg-12 ">
+        <h1>Domestic Violence General Knowledge</h1>
+        <p>TODO</p>
       </div>
     </div>
     
     <div class="row">
-      <div class="col-lg-12 text-center">
-        <h2>This is a sub header</h2>
-        <p>And more text about the site goes here</p>
-        <p>Do we want to use the old background image? http://vc.flcourts.org/graphics/pagebg.jpg it looks like the main flcourts site doesn't anymore
-        </p>
+      <div class="col-lg-12">
+        <h2>Question 1</h2>
+        <p>TODO</p>
       </div>
-	  <div> 
-	  <a href="http://vc.flcourts.org/" target="_blank">Existing VC site</a>
+	  </div>
+	  
+      <div class="row">
+        <div class="col-lg-12">
+          <p>Go to section two? Do we want to do that at the end of each section or force them make to training home page?</p>
+        </div>
+      </div> 
+
 	  </div>
     </div>
 
-  </div>
+
 
   <footer class="page-footer font-small footer">
     ©2021 Office of Court Improvement, Florida Supreme Court
