--- a/index.html
+++ b/index.html
@@ -1,100 +1,151 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-  <title>Virtual Court</title>
-  
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="osca/bootstrap-override.css" rel="stylesheet">
-  <link href="osca/site.css" rel="stylesheet">
+    <title>Virtual Court</title>
 
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="osca/bootstrap-override.css" rel="stylesheet">
+    <link href="osca/site.css" rel="stylesheet">
+    <!-- 
+    <link href='https://fonts.googleapis.com/css?family=Cinzel' rel='stylesheet' type='text/css'>
+    -->
+    <!-- yeah ..nooo 
+    <link href="osca/flcourts_051421.css" rel="stylesheet">
+    -->
+    <link href="vendor/fa/css/all.min.css" rel="stylesheet">
 </head>
 
 <body>
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3">
+                    <img src="content/OSCA-seal.png" class="header__logo"
+                        alt="Florida Office of State Courts Administrator">
+                </div>
+                <div class="col-lg-6">
+                    <p class="header__logo-state">Florida Courts</p>
+                    <p class="header__logo-tag">Accessible | Fair | Effective | Responsive | Accountable</p>
+                </div>
+                <div class="col-lg-3">
+                    <div class="social-block">
+                        <a href="https://www.facebook.com/FloridaCourts/" target="_blank"
+                            alt="Florida Office of State Courts Administrator on Facebook">
+                            <span class="social-icon icon-facebook-circle"
+                                title="Florida Office of State Courts Administrator on Facebook"><i
+                                    class="fab fa-facebook fa-2x"></i></span>
+                        </a>
+                        <a href="https://twitter.com/Florida_Courts" target="_blank"
+                            alt="Florida Office of State Courts Administrator on Twitter">
+                            <span class="social-icon icon-twitter-circle"
+                                title="Florida Office of State Courts Administrator on Twitter"><i
+                                    class="fab fa-twitter fa-2x"></i></span>
+                        </a>
+                        <a href="https://www.linkedin.com/company/florida-office-of-state-courts-administrator"
+                            target="_blank" alt="Florida Office of State Courts Administrator on LinkedIn">
+                            <span class="social-icon icon-linkedin-circle"
+                                title="Florida Office of State Courts Administrator on LinkedIn"><i
+                                    class="fab fa-linkedin fa-2x"></i></span>
+                        </a>
+                        <a href="https://www.instagram.com/floridacourts/" target="_blank"
+                            alt="Florida Office of State Courts Administrator on Instagram">
+                            <span class="social-icon icon-instagram-circle"
+                                title="Florida Office of State Courts Administrator on Instagram"><i
+                                    class="fab fa-instagram fa-2x"></i></span>
+                        </a>
+                    </div>
+                </div>
+                <div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+        <div class="container" id="header-container">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">
+                            Home
+                            <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+                    <!--
+                              <li class="nav-item">
+                                <a class="nav-link" href="training.html">Training</a>
+                              </li> -->
+                    <li class="dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true"
+                            aria-expanded="true">Training <span class="caret"></span></a>
+                        <ul class="dropdown-menu dropdown-menu-dark" id="training-submenu">
+                            <li><a href="dv-injunction-training.html" class="submenu-link">Domestic Violence Injunctions</a></li>
+                            <!-- TODO 
+                            <li><a href="#" class="submenu-link">Stalking Injunctions </a></li>
+                            <li><a href="#" class="submenu-link">Dating Violence Injunctions </a></li>
+                            <li><a href="#" class="submenu-link">Sexual Violence Injunctions </a></li>
+                            -->
+                            <li><a href="certification.html" class="submenu-link">Certification</a></li>
+                        </ul>
+                    </li>
 
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
-    <div class="container">
-      <a class="navbar-brand" href="#">Logo goes here</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-<!-- 
-          <li class="nav-item">
-            <a class="nav-link" href="training.html">Training</a>
-          </li> -->
-          <li class="dropdown">
-            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Training <span class="caret"></span></a> 
-            <ul class="dropdown-menu dropdown-menu-dark">
-                <li><a href="training.html" class="submenu-link">Domestic Violence</a></li>
-                <li><a href="certification.html" class="submenu-link">Certification</a></li>
-            </ul>
-          </li>
 
+                    <li class="nav-item">
+                        <a class="nav-link" href="reference.html">Reference Materials</a>
+                    </li>
+                    <li class="dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true"
+                            aria-expanded="true">Support <span class="caret"></span></a>
+                        <ul class="dropdown-menu dropdown-menu-dark" id="reference-submenu">
+                            <li><a href="contact.html" class="submenu-link">Contact</a></li>
+                            <li><a href="support.html" class="submenu-link">Technical Support</a></li>
+                            <li><a href="confidentiality.html" class="submenu-link">Confidentiality</a></li>
+                        </ul>
+                    </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href="reference.html">Reference Materials</a>
-          </li>
-          <li class="dropdown">
-            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Support <span class="caret"></span></a> 
-            <ul class="dropdown-menu dropdown-menu-dark">
-                <li><a href="contact.html" class="submenu-link">Contact</a></li>
-                <li><a href="support.html" class="submenu-link">Technical Support</a></li>
-                <li><a href="confidentiality.html" class="submenu-link">Confidentiality</a></li>
-            </ul>
-          </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-        </ul>
-      </div>
+    <!-- Page Content -->
+    <div class="container main-body">
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="mt-5">Welcome to the Virtual Court Training</h1>
+                <p class="lead">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                    commodo consequat.
+                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                    pariatur.
+                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+                    est laborum.
+                </p>
+                <p> <a href="http://vc.flcourts.org/" target="_blank">Existing VC site</a></p>
+            </div>
+        </div>
     </div>
-  </nav>
 
-  <!-- Page Content -->
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h1 class="mt-5">This is the main header</h1>
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna 
-          aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-           Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
-    </div>
-    
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h2>This is a sub header</h2>
-        <p>And more text about the site goes here</p>
-        <p>Do we want to use the old background image? http://vc.flcourts.org/graphics/pagebg.jpg it looks like the main flcourts site doesn't anymore
-        </p>
-      </div>
-	  <div> 
-	  <a href="http://vc.flcourts.org/" target="_blank">Existing VC site</a>
-	  </div>
-    </div>
+    <footer class="page-footer font-small footer">
+        ©2021 Office of Court Improvement, Florida Supreme Court
+    </footer>
 
-  </div>
-
-  <footer class="page-footer font-small footer">
-    ©2021 Office of Court Improvement, Florida Supreme Court
-     </footer>
-
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.slim.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.slim.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
