--- a/support.html
+++ b/support.html
@@ -36,7 +36,7 @@
           <li class="dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Training <span class="caret"></span></a> 
             <ul class="dropdown-menu dropdown-menu-dark">
-                <li><a href="training.html" class="submenu-link">Domestic Violence</a></li>
+                <li><a href="dv-injunction-training.html" class="submenu-link">Domestic Violence</a></li>
                 <li><a href="certification.html" class="submenu-link">Certification</a></li>
             </ul>
           </li>
